[workspace]
default-members = [
  "apache",
  "caddy",
  "cassandra",
  "clickhouse",
  "cockroachdb",
  "confd",
  "consul",
  "consul-template",
  "couchdb",
  "daemon",
  "dgraph",
  "dragonflydb",
  "dynamodb-local",
  "elasticmq",
  "envconsul",
  "etcd",
  "httpbin",
  "mariadb",
  "meilisearch",
  "memcached",
  "minikube",
  "minio",
  "mongodb",
  "mysql",
  "nats",
  "nginx",
  "nsq",
  "opentelemetry-collector",
  "php",
  "postgres",
  "quickwit",
  "rabbitmq",
  "redis",
  "rethinkdb",
  "spicedb",
  "stripe-mock",
  "temporal",
  "tidb",
  "typesense",
  "vault",
]
members = [
  "apache",
  "caddy",
  "cassandra",
  "clickhouse",
  "cockroachdb",
  "confd",
  "consul",
  "consul-template",
  "couchdb",
  "daemon",
  "dgraph",
  "dragonflydb",
  "dynamodb-local",
  "elasticmq",
  "envconsul",
  "etcd",
  "httpbin",
  "mariadb",
  "meilisearch",
  "memcached",
  "minikube",
  "minio",
  "mongodb",
  "mysql",
  "nats",
  "nginx",
  "nsq",
  "opentelemetry-collector",
  "php",
  "postgres",
  "quickwit",
  "rabbitmq",
  "redis",
  "rethinkdb",
  "spicedb",
  "stripe-mock",
  "temporal",
  "tidb",
  "typesense",
  "vault",
]
resolver = "2"
