[workspace]
default-members = [
  "apache",
  "caddy",
  "cassandra",
  "clickhouse",
  "cockroachdb",
  "confd",
  "consul",
  "consul-template",
  "couchdb",
  "daemon",
  "dgraph",
  "dragonflydb",
  "dynamodb-local",
  "elasticmq",
  "envconsul",
  "etcd",
  "httpbin",
  "influxdb",
  "jaeger",
  "mailcatcher",
  "mariadb",
  "meilisearch",
  "memcached",
  "minikube",
  "minio",
  "mongodb",
  "mysql",
  "nats",
  "nginx",
  "nsq",
  "opentelemetry-collector",
  "php",
  "postgres",
  "quickwit",
  "rabbitmq",
  "redis",
  "rethinkdb",
  "spicedb",
  "stripe-mock",
  "temporal",
  "tidb",
  "typesense",
  "vault",
  "zipkin",
]
members = [
  "apache",
  "caddy",
  "cassandra",
  "clickhouse",
  "cockroachdb",
  "confd",
  "consul",
  "consul-template",
  "couchdb",
  "daemon",
  "dgraph",
  "dragonflydb",
  "dynamodb-local",
  "elasticmq",
  "envconsul",
  "etcd",
  "httpbin",
  "influxdb",
  "jaeger",
  "mailcatcher",
  "mariadb",
  "meilisearch",
  "memcached",
  "minikube",
  "minio",
  "mongodb",
  "mysql",
  "nats",
  "nginx",
  "nsq",
  "opentelemetry-collector",
  "php",
  "postgres",
  "quickwit",
  "rabbitmq",
  "redis",
  "rethinkdb",
  "spicedb",
  "stripe-mock",
  "temporal",
  "tidb",
  "typesense",
  "vault",
  "zipkin",
]
resolver = "2"
