[workspace]
default-members = [
  "apache",
  "arangodb",
  "caddy",
  "cassandra",
  "clickhouse",
  "cockroachdb",
  "confd",
  "consul",
  "consul-template",
  "couchdb",
  "daemon",
  "dgraph",
  "dragonflydb",
  "dynamodb-local",
  "elasticmq",
  "envconsul",
  "etcd",
  "httpbin",
  "influxdb",
  "jaeger",
  "mailcatcher",
  "mailhog",
  "mailpit",
  "mariadb",
  "meilisearch",
  "memcached",
  "minikube",
  "minio",
  "mongodb",
  "mysql",
  "nats",
  "neo4j",
  "nginx",
  "nsq",
  "opentelemetry-collector",
  "php",
  "postgres",
  "quickwit",
  "rabbitmq",
  "redis",
  "rethinkdb",
  "spicedb",
  "stripe-mock",
  "temporal",
  "tidb",
  "typesense",
  "vault",
  "zipkin",
]
members = [
  "apache",
  "arangodb",
  "caddy",
  "cassandra",
  "clickhouse",
  "cockroachdb",
  "confd",
  "consul",
  "consul-template",
  "couchdb",
  "daemon",
  "dgraph",
  "dragonflydb",
  "dynamodb-local",
  "elasticmq",
  "envconsul",
  "etcd",
  "httpbin",
  "influxdb",
  "jaeger",
  "mailcatcher",
  "mailhog",
  "mailpit",
  "mariadb",
  "meilisearch",
  "memcached",
  "minikube",
  "minio",
  "mongodb",
  "mysql",
  "nats",
  "neo4j",
  "nginx",
  "nsq",
  "opentelemetry-collector",
  "php",
  "postgres",
  "quickwit",
  "rabbitmq",
  "redis",
  "rethinkdb",
  "spicedb",
  "stripe-mock",
  "temporal",
  "tidb",
  "typesense",
  "vault",
  "zipkin",
]
resolver = "2"
