[package]
authors = [
  "Tsiry Sandratraina <tsiry.sndr@fluentci.io>",
]
description = "Neo4j plugin for FluentCI"
edition = "2021"
license = "MIT"
name = "neo4j"
version = "0.1.0"

[lib]
crate-type = [
  "cdylib",
]

[dependencies]
anyhow = "1.0.82"
extism-pdk = "1.1.0"
fluentci-pdk = "0.2.1"
fluentci-types = "0.1.7"
